# scaibu-llm-chatbot

./: .coverage  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  .yamllint  CHANGELOG.md  CHATBOT_IMPROVEMENTS.md  COMPLETION_CHECKLIST.md  EXECUTION_CHECKLIST.md  FEATURE_OVERVIEW.md  FINAL_SUMMARY.md  GRAPH_VISUALIZATION_FEATURE.md  IMPLEMENTATION_SUMMARY.md  Makefile  PIPELINES_CROSS_CHECK.md  PRODUCTION_READINESS_ISSUE.md  QUICK_START_GRAPH_VIZ.md  README.md  TESTING_GUIDE.md  VERIFICATION_CHECKLIST.md  __init__.py  agent.py  bot.py  coverage.xml  docker-compose.yml  llm_client.py  pyproject.toml  requirements.txt  setup_cloudefare_script.sh  setup_knowlage_graph.sh  setup_qdrant_script.sh  terminate_workflow.py  test_kafka_events.py  test_kafka_flow.sh  test_redis_integration.py  test_telemetry.py  test_telemetry_simple.py  trigger_workflow.py  (+1 more)
.streamlit/: secrets.toml.example
ai-proxy/: requirements.txt
ai-proxy-service/: README.md
ai-proxy-service/adapters/llm_provider/: cloudflare.py
ai-proxy-service/core/ports/: stt_provider.py
ai-proxy-service/core/usecases/: synthesize_speech.py
ai-proxy/adapters/llm_provider/: anthropic.py
ai-proxy/config/: providers.yaml
ai-proxy/core/ports/: llm_provider.py
ai-proxy/core/usecases/: generate_text.py  transcribe_audio.py
auth_data/: sessions.json  users.json
automation-n8n-service/: compose.yaml
automation-n8n-service/docs/: n8n Local Troubleshooting Runbook.md
automation-n8n-service/grafana/: grafana.ini
automation-n8n-service/traefik/certs/: n8n.localtest.me-key.pem
automation-n8n-service/traefik/dynamic/: tls.yml
automation-n8n-service/workflow/: ai_content_generations.json
chat_backups/: conversations.json
cloudflare-ai-proxy/: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  requirements.txt
cloudflare-ai-proxy/app/: __init__.py  cf_client.py  config.py  main.py  models.py
cloudflare-ai-proxy/configs/: model.yaml
docs/api/: README.md
docs/architecture/: overview.md
docs/deployment/: README.md
embedding-service/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  requirements-full.txt  requirements-production.txt  requirements.txt
embedding-service/api/middleware/: logging.py
embedding-service/api/routes/: collections.py  health.py  search.py
embedding-service/core/config/: settings.py
embedding-service/core/models/: vector_point.py
embedding-service/core/schemas/: __init__.py  requests.py  responses.py
embedding-service/handlers/: embedding_handler.py
embedding-service/scripts/: setup.py
embedding-service/services/embedding/: text_embedder.py
embedding-service/services/storage/: qdrant_client.py
embedding-service/tests/integration/: test_api.py
embedding-service/tests/unit/: test_embeddings.py
embedding-service/utils/: helpers.py
infrastructure/: README.proxy.md  README.routing.md  docker-compose.proxy.yml  docker-compose.routing.yml
infrastructure/databases/: README.md  docker-compose.databases.yml  docker-compose.neo4j.yml  docker-compose.qdrant.yml
infrastructure/databases/mcp-neo4j-memory/: README.md  deploy.sh  docker-compose.neo4j-memory.yml  neo4j-server-configs.json
infrastructure/kafka/: README.md  docker-compose.kafka-ui.yml  docker-compose.kafka.yml  test_kafka.py
infrastructure/kafka/config/: README.md
infrastructure/kafka/events/: README.md
infrastructure/kafka/topics/: README.md
infrastructure/monitoring/: README.md  docker-compose.monitoring.yml  setup-observability.sh
infrastructure/monitoring/component/: grafana-secrets.env  grafana.env
infrastructure/monitoring/loki/: config.yml
infrastructure/monitoring/promtail/: config.yml
infrastructure/observability/docs/: README.md
infrastructure/observability/triggers/: trigger_logs_pipeline.py
infrastructure/observability/workers/: logs_pipeline_worker.py
infrastructure/observability/workflows/: logs_pipeline_workflow.py
infrastructure/observability_platform/: README.md
infrastructure/observability_platform/config/: alerts.yaml  dashboards.yaml  datasources.yaml  exporters.yaml  processors.yaml  receivers.yaml  telemetry.yaml
infrastructure/observability_platform/docs/: README.md
infrastructure/orchestrator/: README.md  temporal-orchestrator-compose.yaml
infrastructure/orchestrator/activities/: __init__.py  ai_proxy_container_activity.py  hello_activity.py  start_app.py  start_grafana.py  start_loki.py  start_promtail.py
infrastructure/orchestrator/base/: __init__.py  base_container_activity.py  base_pipeline.py  base_trigger.py  base_worker.py  base_workflow.py
infrastructure/redis/: README.md
infrastructure/traefik/dynamic/: tls.yml
kg-service/: clean.sh  docker-compose.yml
n8n-stack/: .gitignore  compose.yaml  readme.md
n8n-stack/automation-api/: Dockerfile  main.py
n8n-stack/docs/: n8n + Traefik + Slack OAuth .md
n8n-stack/loki/: config.yml
n8n-stack/n8n/: Dockerfile
rag-service/: .gitignore  Dockerfile  README.md  debug.sh  docker-compose.yml  main.py  requirements.txt  start.sh  stop.sh
rag-service/core/: config.py  models.py
rag-service/services/: embedding_service.py  pdf_processor.py  qdrant_service.py  rag_service.py
service/: __init__.py  redis_service.py
service/ai-proxy-service/: Dockerfile  __init__.py  docker-compose.yml  requirements.txt  start.sh
service/automation-n8n-service/: __init__.py  compose.yaml  docker-compose.yml
service/kg-service/: .env.example  .gitignore  Dockerfile  README.md  __init__.py  docker-compose.yml  requirements.txt
service/llm_chat_app/: ADVANCED_FEATURES.md  Dockerfile  Knowledge Graph Implementation.md  README.md  Required Keys for Deployment.md  main.py  requirements.txt  setup.sh
service/rag-service/: .dockerignore  Dockerfile  __init__.py  docker-compose.yml  requirements.txt
service/telemetry/: README.md  __init__.py  graceful_degradation_example.py
src/: agent.py  bot.py  graph.py  llm_client.py
tools/: cypher.py  vector.py
utils/: blueprint.sh  config.conf  ignore.conf
(+304 files in other folders)
